static/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    text-decoration: none;
    font-family: 'Poppins', sans-serif;
    color: white;
}

.body {
    max-width: 1150px;
    margin: auto;
}

body {
    background: #2F303A;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 0 2em;
}

.logo a {
    display: flex;
}

.logo a p {
    padding: 0.8em 0.4em;
    font-size: 2em;
}

header ul {
    list-style: none;
    display: flex;
}

header ul li {
    padding: 0 1em;
    margin: auto;
}

.container {
    display: flex;
}

.left {
    width: 50%;
}

.left img {
    width: 100%;
}

.right {
    width: 50%;
}

.right h1 {
    font-weight: normal;
}

.right h3 {
    font-weight: normal;
}

button {
    background-color: #1762A7;
    border: none;
    padding: 1em 4em;
}

form {
    background-color: #000533;
    border-radius: 10px;
    padding: 2em;
    max-width: 400px;
    margin: auto;
}

label {
    font-size: 1.3em;
}

input {
    border-color: #1762A7;
    background-color: #000533;
}

#email {
    width: 100%;
}

#pw {
    width: 100%;
}

.submit {
    background-color: #1762A7;
    border: none;
    padding: 1em 4em;
    display: block;
    margin: auto;
}

.dashboard-header {
    display: flex;
    justify-content: space-between;
}

.dashboard-header h3 {
    align-self: center;
}

.dashboard {
    width: 100%;
}

.dashboard-options {
    display: flex;
    justify-content: space-between;
}

.coach-filter {
    align-self: center;
}

.new-button {
    align-self: center;
}

.dashboard-options div {
    padding: 0 1em;
}

#new-user-form {
    display: none;
    position: fixed;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    z-index: 9;
}

#bg-cover {
    display: none;
    position: absolute;
    left: 0; right: 0; top: 0; bottom: 0;
    background: rgba(0,0,0,0.5);
}

#new-user-form form input {
    padding: 1em 0;
}

#new-user-form form label {
    padding: 1em 0;
}

#new-user-form form .block {
    display: block;
}

#new-user-form form .button {
    background-color: #1762A7;
    border: none;
    padding: 1em 4em;
    margin: 1em 0;
}

#new-user-form form select {
    padding: 1em;
}

#new-user-form form button {
    margin: 1em 0;
}

select {
    color: black;
}

option {
    color: black;
}

table {
    margin-top: 1em;
    width: 100%;
}

.who-row {
    display: flex;
    width: 40%;
    overflow: hidden;
}

.athlete-row {
    width: 30%;
}

.package-row {
    width: 30%;
}

.linkbox {
    margin: auto 0;
    display: flex;
}

th {
    text-align: left;
}

i {
    cursor: pointer;
    padding: 0 0.2em;
}

svg {
    background-color: #2F303A !important;
}

svg div {
    color: white !important;
    font-family: 'Poppins', sans-serif !important;
    font-size: 0.8em !important;
    display: flex !important;
    flex-direction: column;
}

svg p {
    margin: 1.2em;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

svg a:hover {
    text-decoration: underline;
}

input[type="range"] {
    -webkit-appearance: none !important;
    width: 80%;
    height: 2px;
    background-color: grey;
    border: 1px solid grey;
    border-radius: 5px;
    margin: auto;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none !important;
    width: 8px;
    height: 8px;
    background: white;
    border-radius: 50%;
}

path {
    stroke: white;
    fill: none;
}

rect {
    stroke: none;
}

#tree {
    height: 100vh;
    width: 100vw;
    position: absolute;
    padding: 2em;
}

body {
    overflow: hidden;
}

svg {
    height: 100%;
    width: 100%;
}

nav {
    position: fixed;
    top: 0;
    left: 0;
    background-color: #000533;
    border-radius: 1em;
    margin: 1em;
    opacity: 50%;
    z-index: 8;
}

nav:hover {
    opacity: 100%;
}

nav ul {
    display: flex;
    list-style: none;
}

nav ul li {
    padding: 1em;
}

.userhome {
    margin-top: 3em;
}

.user-container {
    display: flex;
    flex-flow: column;
}

.tab-head {
    display: flex;
}

.tab-head ul {
    display: flex;
    list-style: none;
}

.tab-head ul li {
    padding: 1em;
}

